RESOLVED FIXED25761
Missing padding-end, margin-end etc.
https://bugs.webkit.org/show_bug.cgi?id=25761
Summary Missing padding-end, margin-end etc.
Erik Arvidsson
Reported 2009-05-13 15:06:33 PDT
WebKit currently have the following CSS properties: -webkit-padding-start -webkit-margin-start but it is missing the equivalent values for 'end'.
Attachments
Patch (12.57 KB, patch)
2010-07-01 16:41 PDT, Erik Arvidsson
no flags
Patch (12.60 KB, patch)
2010-07-01 16:43 PDT, Erik Arvidsson
no flags
Remove trailing whitespace (12.41 KB, patch)
2010-07-01 16:46 PDT, Erik Arvidsson
no flags
Make tests cover RTL as well (14.87 KB, patch)
2010-07-01 17:35 PDT, Erik Arvidsson
no flags
Patch for landing (14.86 KB, patch)
2010-07-07 16:51 PDT, Erik Arvidsson
commit-queue: commit-queue-
Oded Arbel
Comment 1 2009-06-04 13:18:58 PDT
Agree - there should be *-end properties
Benjamin
Comment 2 2009-11-02 02:54:33 PST
Hello, I must use these properties for the RTL mode of my webapplication. Could you please fix it ?
Benjamin
Comment 3 2010-01-18 08:50:17 PST
Please confirm the bug. You can check at http://help.dottoro.com/lchucsdq.php#-webkit-padding-end and see the bug (check also "padding-start" to see it working normaly).
Erik Arvidsson
Comment 4 2010-07-01 14:49:14 PDT
*** Bug 41322 has been marked as a duplicate of this bug. ***
Erik Arvidsson
Comment 5 2010-07-01 16:41:54 PDT
Erik Arvidsson
Comment 6 2010-07-01 16:43:31 PDT
Erik Arvidsson
Comment 7 2010-07-01 16:46:45 PDT
Created attachment 60314 [details] Remove trailing whitespace
Erik Arvidsson
Comment 8 2010-07-01 17:15:53 PDT
Comment on attachment 60314 [details] Remove trailing whitespace I need to make the tests actually test rtl.
Erik Arvidsson
Comment 9 2010-07-01 17:35:11 PDT
Created attachment 60320 [details] Make tests cover RTL as well
Erik Arvidsson
Comment 10 2010-07-02 12:36:40 PDT
Hamaji, could you review this?
WebKit Commit Bot
Comment 11 2010-07-07 15:52:46 PDT
Comment on attachment 60320 [details] Make tests cover RTL as well Rejecting patch 60320 from commit-queue. Unexpected failure when processing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 60320, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Last 500 characters of output: date_status return NetworkTransaction().run(lambda: self._post_status_to_server(queue_name, status, patch, results_file)) File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/webkitpy/common/net/networktransaction.py", line 56, in run self._check_for_timeout() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/webkitpy/common/net/networktransaction.py", line 63, in _check_for_timeout raise NetworkTimeout() webkitpy.common.net.networktransaction.NetworkTimeout
Erik Arvidsson
Comment 12 2010-07-07 16:51:53 PDT
Created attachment 60805 [details] Patch for landing
WebKit Commit Bot
Comment 13 2010-07-08 03:51:09 PDT
Comment on attachment 60805 [details] Patch for landing Rejecting patch 60805 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Running build-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 19307 test cases. fast/loader/recursive-before-unload-crash.html -> failed Exiting early after 1 failures. 14202 tests run. 260.93s total testing time 14201 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 1 test case (<1%) had stderr output Full output: http://webkit-commit-queue.appspot.com/results/3425031
Eric Seidel (no email)
Comment 14 2010-07-08 10:46:16 PDT
Comment on attachment 60805 [details] Patch for landing Bug 41871
WebKit Commit Bot
Comment 15 2010-07-08 22:05:56 PDT
Comment on attachment 60805 [details] Patch for landing Rejecting patch 60805 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--force']" exit_code: 1 Last 500 characters of output: k #1 FAILED at 215. Hunk #2 FAILED at 240. 2 out of 2 hunks FAILED -- saving rejects to file WebCore/css/CSSPropertyNames.in.rej patching file WebCore/css/CSSStyleSelector.cpp Hunk #1 FAILED at 3109. Hunk #2 FAILED at 5506. 2 out of 2 hunks FAILED -- saving rejects to file WebCore/css/CSSStyleSelector.cpp.rej patching file WebCore/inspector/front-end/SourceCSSTokenizer.js Hunk #1 FAILED at 81. 1 out of 1 hunk FAILED -- saving rejects to file WebCore/inspector/front-end/SourceCSSTokenizer.js.rej Full output: http://webkit-commit-queue.appspot.com/results/3487059
Note You need to log in before you can comment on or make changes to this bug.