2010-07-08  Erik Arvidsson  <arv@chromium.org>

Reviewed by Ojan Vafai.

        Add missing padding-end and margin-end CSS properties.
        https://bugs.webkit.org/show_bug.cgi?id=25761

        Tests: fast/css/margin-start-end.html
               fast/css/padding-start-end.html

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        * css/CSSPropertyNames.in:
        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):
        * inspector/front-end/SourceCSSTokenizer.js:
        (WebInspector.SourceCSSTokenizer):

2010-07-08  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Ojan Vafai.

        Add missing padding-end and margin-end CSS properties.
        https://bugs.webkit.org/show_bug.cgi?id=25761

        * fast/css/margin-start-end-expected.txt: Added.
        * fast/css/margin-start-end.html: Added.
        * fast/css/padding-start-end-expected.txt: Added.
        * fast/css/padding-start-end.html: Added.
        * fast/css/script-tests/margin-start-end.js: Added.
        (test):
        * fast/css/script-tests/padding-start-end.js: Added.
        (test):

Canonical link: https://commits.webkit.org/53769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62877 268f45cc-cd09-0410-ab3c-d52691b4dbfc